Fix truncating

--- a/frontend/src/components/TrackList/TrackList.module.css
+++ b/frontend/src/components/TrackList/TrackList.module.css
@@ -22,9 +22,9 @@
 
 .TrackHeader {
   display: flex;
-  min-width: 210px;
   flex-direction: column;
   margin-left: 10px;
+  max-width: 220px;
 }
 
 .Title {
@@ -43,4 +43,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  .TrackHeader {
+    max-width: 500px;
+  }
 }
